--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -14,7 +14,7 @@
 
 .c-info {
   display: flex;
-  justify-content: space-around;
+   flex-direction: column;
 }
 .c-left {
   flex-direction: column;
